...
        android:layout_width="292dp"
        android:layout_height="54dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:hintTextAppearance="@style/HintColour">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Username"
            android:theme="@style/EditTextTheme"
            tools:ignore="HardcodedText"
            android:inputType="textPersonName" />
...
